--- a/style.css
+++ b/style.css
@@ -41,3 +41,20 @@ body{
 .tree{
     background: #67c23a;
 }
+
+.bar{
+    background: salmon;
+}
+
+.zee{
+    background: #e6a23c;
+}
+.elLeft{
+    background: #8e44ad;
+}
+.elRight{
+    background: #16a085;
+}
+.square{
+    background: rgb(150, 135, 235);
+}
